--- a/ML for ESKD/joint_model.Rmd
+++ b/ML for ESKD/joint_model.Rmd
@@ -9,9 +9,7 @@ editor_options:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE, results = 'asis', collapse = TRUE)
-libraries <- c('plotly', 'heatmaply', 'shiny', 'gt', 'gtsummary', 'data.table',
-               'tidyverse', 'skimr', 'tidymodels', 'JMbayes2', "cmprsk", 
-               "broom.mixed")
+libraries <- c("tidyverse", 'data.table', 'skimr', "mice", "JMbayes2")
 installed <- installed.packages()[,'Package']
 new.libs <- libraries[!(libraries %in% installed)]
 if(length(new.libs)) install.packages(new.libs,repos="http://cran.csiro.au",
@@ -23,20 +21,53 @@ seed <- 7
 ```
 
 ```{r cross-validation}
-short_dt <- readRDS("acrbased_short.RDS")
+dt <- readRDS("tangri3.RDS")
+
+# Replacing unlikely value of albumin/creatinine ratio == 0 (4 IDs)
+dt <- dt %>% 
+    mutate(value = replace(value, 
+                           test == "albcreat_ratio" & value == 0, 0.1),
+           sex = factor(sex,levels = c("Female", "Male"))) 
+
+short_dt <- dt %>% 
+    select(id, value_egfr_init, sex:gn, time_eskd:status_compete) %>% 
+    distinct() %>% 
+    mutate(gn = replace(gn, gn != "no", "yes"),
+           gn = factor(gn, levels = c("no", "yes")))
 
 set.seed(seed)
-folds <- vfold_cv(short_dt, v = cross_val,strata = "status_compete")
+folds <- rsample::vfold_cv(short_dt, v = cross_val, strata = "time_compete")
+train1_dt <- folds$splits[[1]] %>% rsample::analysis() 
+test1_dt <- folds$splits[[1]] %>% rsample::assessment()
 
-short_dt1_train <- folds$splits[[1]] %>% analysis() 
-short_dt1_test <- folds$splits[[1]] %>% assessment()
-
-long_dt <- readRDS("acrbased_long.RDS")
+longtrain1_dt <- dt %>% 
+    filter(id %in% train1_dt$id) %>%
+    select(id:relyear)
 ```
 
+```{r imputation}
+dt <- longtrain1_dt %>% 
+    pivot_wider(id_cols = c("id", "relyear"),
+                names_from = test,
+                values_from = value)
+
+impute_dt <- dt %>% 
+    filter(relyear == 0)
+temp_dt <- mice(impute_dt, m = 1, maxit = 50, method = "pmm", seed = seed)
+impute_dt <- complete(temp_dt)
+
+longtrain1_dt <- impute_dt %>% 
+    pivot_longer(cols = albumin:postural_hr,
+                 names_to = "test",
+                 values_to = "value") %>% 
+    bind_rows(longtrain1_dt) %>% 
+    arrange(id, relyear, test) %>% 
+    distinct()
+```
+Due to infinity of survival model coefficient for MCD and FG/ITG (gn diagnosis) due to minimal or no event, the gn diagnosis was collapsed into yes/no. Following further analysis, there was no significant interaction between sex/age_init or sex/gn. However, there was significant interaction between gn/age_init.
 ```{r survival model}
-short_dt1trainCR <- short_dt1_train %>% 
-    select(id:htn, time_compete, status_compete) %>% 
+train1_dtCR <- train1_dt %>% 
+    select(-time_eskd, -status_eskd) %>% 
     mutate(status_compete = factor(status_compete, levels = c(0, 1, 2),
                                    labels = c("censored", "eskd", "death"))) %>% 
     JMbayes2::crisk_setup(data = .,
@@ -45,378 +76,112 @@ short_dt1trainCR <- short_dt1_train %>%
                           nameStrata = "CR")
 
 jm_surv_model <- coxph(Surv(time = time_compete, event = status2) ~ 
-                        (htn + dkd + gn + sex + age_init + 
-                             value_egfr_init)*strata(CR), 
-                    data = short_dt1trainCR)
+                        (value_egfr_init + sex + age_init)*strata(CR), 
+                    data = train1_dtCR)
+
 summary(jm_surv_model)
 ```
 
 ```{r longitudinal covariates}
-long_dt1train <- long_dt %>% 
-    right_join(dplyr::select(short_dt1trainCR, id, sex, age_init,
-                             dkd, htn), by = "id") %>% distinct()
-
-long_dt1train <- long_dt1train %>% 
-    pivot_wider(id_cols = c("id", "relyear", "sex", "age_init", "dkd", "htn"),
-                names_from = test,values_from = value,
-                values_fn = mean)
+longtrain1_dt <- longtrain1_dt %>% 
+    left_join(select(train1_dt, id:gn), by = "id") %>% 
+    pivot_wider(id_cols = c("id", "relyear", "sex", "age_init", "gn"),
+                names_from = test,
+                values_from = value) %>%
+    fill(adjca:weight)
 ```
 
-```{r function to create linear mixed model}
-linear_model_function <- function(y_name, dataset){
-    group_variables <- c("relyear", "age_init", "sex", "htn", "dkd")
-    lmm_formula <- reformulate(group_variables,
-                               response = y_name)
-    lme(lmm_formula, random = ~ relyear|id,
-        data = dataset, na.action = na.omit,
-        control = list(maxIter = 100, opt = "optim"))
-}
+```{r function to create base linear model}
+# model0 <- function(y_name, dataset){
+#     lmm_formula <- reformulate(termlabels = "relyear" ,
+#                                response = y_name, intercept = TRUE)
+#     lme(lmm_formula, 
+#         random = ~ relyear|id,
+#         data = dataset, na.action = na.omit,
+#         )
+# }
+# 
+# model1 <- function(y_name, dataset){
+#     group_variables <- c("relyear", "age_init", "sex", "gn")
+#     lmm_formula <- reformulate(termlabels = group_variables ,
+#                                response = y_name, intercept = TRUE)
+#     lme(lmm_formula, 
+#         random = ~ relyear|id,
+#         data = dataset, na.action = na.omit,
+#         control = list(maxIter = 100, opt = "optim")
+#         )
+# }
+# 
+# model2 <- function(y_name, dataset){
+#     group_variables <- c("relyear", "age_init", "sex", "gn", "relyear:age_init",
+#                          "relyear:sex", "relyear:gn")
+#     lmm_formula <- reformulate(termlabels = group_variables ,
+#                                response = y_name, intercept = TRUE)
+#     lme(lmm_formula, 
+#         random = ~ relyear|id,
+#         data = dataset, na.action = na.omit,
+#         control = list(maxIter = 100, opt = "optim")
+#         )
+# }
+# 
+# model3 <- function(y_name, dataset){
+#     group_variables <- c("relyear", "I(relyear^2)", "I(relyear^3)", 
+#                          "age_init", "sex", "gn", 
+#                          "relyear:age_init","relyear:sex", "relyear:gn")
+#     lmm_formula <- reformulate(termlabels = group_variables ,
+#                                response = y_name, intercept = TRUE)
+#     lme(lmm_formula, 
+#         random = ~ relyear|id,
+#         data = dataset, na.action = na.omit,
+#         control = list(maxIter = 100, opt = "optim")
+#         )
+# }
 ```
 
-```{r base models}
-alb_base_model <- linear_model_function("albumin", long_dt1train)
-albcreat_base_model <- linear_model_function("albcreat_ratio", long_dt1train)
-alkphos_base_model <- linear_model_function("alkphos", long_dt1train)
-alt_base_model <- linear_model_function("alt", long_dt1train)
-bicarb_base_model <- linear_model_function("bicarb", long_dt1train)
-bilirubin_base_model <- linear_model_function("bilirubin", long_dt1train)
-adjca_base_model <- linear_model_function("adjca", long_dt1train)
-chloride_base_model <- linear_model_function("chloride", long_dt1train)
-crp_base_model <- linear_model_function("crp", long_dt1train)
-egfr_base_model <- linear_model_function("egfr", long_dt1train)
-ggt_base_model <- linear_model_function("ggt", long_dt1train)
-globulin_base_model <- linear_model_function("globulin", long_dt1train)
-glucose_base_model <- linear_model_function("glucose", long_dt1train)
-hb_base_model <- linear_model_function("haemoglobin", long_dt1train)
-hct_base_model <- linear_model_function("haematocrit", long_dt1train)
-mch_base_model <- linear_model_function("mch", long_dt1train)
-mcv_base_model <- linear_model_function("mcv", long_dt1train)
-mg_base_model <- linear_model_function("magnesium", long_dt1train)
-ph_base_model <- linear_model_function("phosphate", long_dt1train)
-plt_base_model <- linear_model_function("platelet", long_dt1train)
-potassium_base_model <- linear_model_function("potassium", long_dt1train)
-sodium_base_model <- linear_model_function("sodium", long_dt1train)
-urate_base_model <- linear_model_function("urate", long_dt1train)
-wcc_base_model <- linear_model_function("wcc", long_dt1train)
-bmi_base_model <- linear_model_function("bmi", long_dt1train)
-sitsys_base_model <- linear_model_function("sitsys", long_dt1train)
-sitdias_base_model <- linear_model_function("sitdias", long_dt1train)
-postsys_base_model <- linear_model_function("postural_sys", long_dt1train)
-postdias_base_model <- linear_model_function("postural_dias", long_dt1train)
+```{r exploring individual mixed model}
+albcreat_model <- lme(log(albcreat_ratio) ~ relyear + I(relyear^2) + 
+                          I(relyear^3) + age_init + gn + relyear:age_init +
+                          relyear:gn, random = ~relyear|id, 
+                      data = longtrain1_dt, na.action = na.omit,
+                       control = list(maxIter = 100, opt = "optim"))
+
+albumin_model <- lme(albumin ~ relyear + I(relyear^2)+ age_init + gn +
+                      relyear:age_init + relyear:gn + sex + relyear:sex,
+                       random = ~relyear|id, data = longtrain1_dt, 
+                     na.action = na.omit, 
+                       control = list(maxIter = 100, opt = "optim"))
+
+adjca_model <- lme(adjca ~ relyear + age_init + gn +
+                      relyear:age_init + relyear:gn + sex + relyear:sex,
+                       random = ~relyear|id, data = longtrain1_dt, 
+                       control = list(maxIter = 100, opt = "optim"))
+
+phosphate_model <- lme(phosphate ~ relyear + I(relyear^2)+ age_init + gn +
+                      relyear:age_init + relyear:gn + sex + relyear:sex,
+                       random = ~relyear|id, data = longtrain1_dt,
+                       control = list(maxIter = 100, opt = "optim"))
+
+bicarb_model <- lme(bicarb ~ relyear + I(relyear^2)+ age_init + gn +
+                      relyear:age_init + relyear:gn + sex + relyear:sex,
+                       random = ~relyear|id, data = longtrain1_dt, 
+                    na.action = na.exclude,
+                       control = list(maxIter = 100, opt = "optim"))
+
+egfr_model <- lme(egfr ~ relyear + I(relyear^2) + age_init + relyear:age_init +
+                      sex + relyear:sex, random = ~relyear|id, 
+                  data = longtrain1_dt, na.action = na.exclude,
+                  control = list(maxIter = 100, opt = "optim"))
 ```
 
 ```{r base joint model}
 base_CR_forms <- list(
-    "albumin" = ~ value(albumin):CR,
-    "albcreat_ratio" = ~ value(albcreat_ratio):CR,
-    "alkphos" = ~ value(alkphos):CR,
-    "alt" = ~ value(alt):CR,
     "bicarb" = ~ value(bicarb):CR,
-    "bilirubin" = ~ value(bilirubin):CR,
-    "adjca" = ~ value(adjca):CR,
-    "chloride" = ~ value(chloride):CR,
-    "crp" = ~ value(crp):CR,
-    "egfr" = ~ value(egfr):CR,
-    "ggt" = ~ value(ggt):CR,
-    "globulin" = ~ value(globulin):CR,
-    "haemoglobin" = ~ value(haemoglobin):CR,
-    "haematocrit" = ~ value(haematocrit):CR,
-    "mch" = ~ value(mch):CR,
-    "mcv" = ~ value(mcv):CR,
-    "magnesium" = ~ value(magnesium):CR,
-    "phosphate" = ~ value(phosphate):CR,
-    "platelet" = ~ value(platelet):CR,
-    "potassium" = ~ value(potassium):CR,
-    "sodium" = ~ value(sodium):CR,
-    "urate" = ~ value(urate):CR,
-    "wcc" = ~ value(wcc):CR,
-    "sitsys" = ~ value(sitsys):CR,
-    "sitdias" = ~ value(sitdias):CR,
-    "postural_sys" = ~ value(postural_sys):CR,
-    "postural_dias" = ~ value(postural_dias):CR
-)
+    "egfr" = ~ value(egfr):CR)
 
-joint_model_base <- jm(Surv_object = jm_surv_model,
-                       Mixed_objects = list(alb_base_model, albcreat_base_model,
-                                            alkphos_base_model, alt_base_model,
-                                            bicarb_base_model,
-                                            bilirubin_base_model,
-                                            adjca_base_model, 
-                                            chloride_base_model,
-                                            crp_base_model, egfr_base_model,
-                                            ggt_base_model, globulin_base_model,
-                                            hb_base_model, hct_base_model,
-                                            mch_base_model, mcv_base_model,
-                                            mg_base_model, ph_base_model,
-                                            plt_base_model, potassium_base_model,
-                                            sodium_base_model, urate_base_model,
-                                            wcc_base_model, bmi_base_model,
-                                            sitsys_base_model, 
-                                            sitdias_base_model,
-                                            postsys_base_model,
-                                            postdias_base_model),
+joint_model_tangri <- jm(Surv_object = jm_surv_model,
+                       Mixed_objects = list(bicarb_model, 
+                                            egfr_model),
                        time_var = "relyear",
-                       functional_forms = base_CR_forms,
-                       n_iter = 30000L, n_burnin = 6000L, n_thin = 5L)
+                       functional_forms = base_CR_forms, 
+                       n_iter = 25000L, n_burnin = 5000L, n_thin = 5L)
 ```
-```
-
-```{r egfr model}
-egfr_model <- lme(egfr ~ relyear + age_init + sex + htn + dkd,
-                  random = ~ relyear | id,
-                  data = long_dt1train, na.action = na.omit,
-                  control = list(maxIter = 100, opt = "optim"))
-summary(egfr_model)
-
-egfr_model1 <- lme(egfr ~ relyear + I(relyear^2) + age_init + sex + 
-                      htn + dkd,
-                  random = ~ relyear | id,
-                  data = long_dt1train, na.action = na.omit,)
-summary(egfr_model1)
-
-egfr_model2 <- lme(egfr ~ relyear + ns(relyear,) + age_init + sex + dkd,
-                   random = ~ relyear|id,
-                   data = long_dt1train, na.action = na.omit,
-                   control = list(maxIter = 100, opt = "optim"))
-summary(egfr_model2)
-# egfr_model2 had the lowest AIC
-```
-
-```{r albcreat model}
-albcreat_model <- lme(albcreat_ratio ~ relyear + age_init + sex + dkd + htn,
-                       random = ~ relyear | id,
-                       data = long_dt1train, na.action = na.omit)
-summary(albcreat_model)
-
-albcreat_model1 <- update(albcreat_model,
-                          fixed. = albcreat_ratio ~ relyear + I(relyear^2) + age_init + sex + dkd)
-summary(albcreat_model1)
-# albcreat_model1 had the lowest AIC
-```
-
-```{r calcium model}
-ca_model <- lme(calcium ~ relyear + age_init + sex + htn + dkd,
-                random = ~ relyear | id,
-                data = long_dt1train, na.action = na.omit)
-summary(ca_model)
-
-ca_model1 <- update(ca_model, 
-                    fixed. = calcium ~ relyear + I(relyear^2) + age_init + 
-                        sex + htn + dkd)
-summary(ca_model1)
-```
-ca_model1 had the lowest AIC
-```{r phosphate model}
-ph_model <- lme(phosphate ~ relyear + sex + dkd,
-                random = ~ relyear | id,
-                data = long_dt1train, na.action = na.omit,
-                control = list(maxIter = 100, opt = "optim"))
-summary(ph_model)
-
-ph_model1 <- update(ph_model,
-                    fixed. = phosphate ~ relyear + I(relyear^2) + sex + dkd)
-summary(ph_model1)
-```
-ph_model1 had the lowest AIC (but minimal). Hence, ph_model was chosen
-```{r bicarbonate model}
-bicarb_model <- lme(bicarbonate ~ relyear + age_init + sex + htn + 
-                        dkd,
-                    random = ~ relyear | id,
-                    data = long_dt1train, na.action = na.omit,
-                    control = list(maxIter = 100, opt = "optim"))
-summary(bicarb_model)
-
-bicarb_model1 <- update(bicarb_model,
-                        fixed. = bicarbonate ~ relyear + I(relyear^2) + 
-                            age_init + sex + htn + dkd)
-```
-bicarb_model had the lowest AIC
-```{r serum alb model}
-alb_model <- lme(albumin ~ relyear + age_init + sex + htn + 
-                        dkd + gn,
-                 random = ~ relyear | id,
-                 data = long_dt1train, na.action = na.omit)
-summary(alb_model)
-
-alb_model1 <- update(alb_model,
-                     fixed. = albumin ~ relyear + I(relyear^2) + 
-                         age_init + sex + htn + 
-                        dkd + gn)
-```
-alb_model1 had the lowest AIC
-```{r magnesium model}
-mg_model <- lme(magnesium ~ relyear + age_init + sex + dkd,
-                 random = ~ relyear | id,
-                 data = long_dt1train, na.action = na.omit)
-summary(mg_model)
-
-mg_model1 <- update(mg_model,
-                    fixed. = magnesium ~ relyear + I(relyear^2) + age_init + 
-                        sex + dkd)
-```
-mg_model had the lowest AIC
-```{r alkphos model}
-alk_model <- lme(alkphos ~ relyear + age_init + sex + htn + 
-                        dkd,
-                 random = ~ relyear | id,
-                 data = long_dt1train, na.action = na.omit)
-summary(alk_model)
-
-alk_model1 <- update(alk_model,
-                     fixed. = alkphos ~ relyear + I(relyear^2) + age_init + 
-                         sex + htn + 
-                        dkd)
-```
-alk_model1 had the lowest AIC
-```{r na model}
-na_model <- lme(sodium ~ relyear + age_init + sex + htn + 
-                        dkd,
-                random = ~ relyear | id,
-                 data = long_dt1train, na.action = na.omit)
-summary(na_model)
-
-na_model1 <- update(na_model,
-                    fixed. = sodium ~ relyear + I(relyear^2) + age_init + 
-                        sex + htn + 
-                        dkd)
-```
-na_model had the lowest AIC
-```{r k model}
-k_model <- lme(potassium ~ relyear + age_init + sex + htn + dkd,
-               random = ~ relyear | id,
-                 data = long_dt1train, na.action = na.omit)
-summary(k_model)
-
-k_model1 <- update(k_model, 
-                   fixed. = potassium ~ relyear + I(relyear^2) + age_init + 
-                       sex + htn + dkd)
-```
-k_model1 had the lowest AIC
-```{r chloride model}
-cl_model <- lme(chloride ~ relyear + age_init + sex + htn + dkd,
-               random = ~ relyear | id,
-                 data = long_dt1train, na.action = na.omit,
-               control = list(maxIter = 100, opt = "optim"))
-summary(cl_model)
-
-cl_model1 <- update(cl_model,
-                    fixed. = chloride ~ relyear + I(relyear^2) + age_init + 
-                        sex + htn + dkd)
-```
-cl_model had the lowest AIC
-```{r urate model}
-urate_model <- lme(urate ~ relyear + age_init + sex + htn + dkd,
-                   random = ~ relyear | id,
-                 data = long_dt1train, na.action = na.omit)
-summary(urate_model)
-
-urate_model1 <- update(urate_model,
-                       fixed. = urate ~ relyear + I(relyear^2) + 
-                           age_init + sex + htn + dkd)
-```
-urate_model1 had the lowest AIC
-```{r pth model}
-pth_model <- lme(pth ~ relyear + age_init + sex + htn + dkd,
-                 random = ~ relyear | id,
-                 data = long_dt1train, na.action = na.omit)
-summary(pth_model)
-
-pth_model1 <- update(pth_model,
-                     fixed. = pth ~ relyear + I(relyear^2) + age_init + 
-                         sex + htn + dkd)
-```
-pth_model1 had slightly better AIC. Hence, simpler pth_model was chosen
-```{r crp model}
-crp_model <- lme(crp ~ relyear + age_init + sex + htn + dkd,
-                 random = ~ relyear | id,
-                 data = long_dt1train, na.action = na.omit)
-summary(crp_model)
-
-crp_model1 <- update(crp_model,
-                     fixed. = crp ~ relyear + I(relyear^2) + age_init + 
-                         sex + htn + dkd)
-```
-crp_model had the lowest AIC
-```{r hb model}
-hb_model <- lme(haemoglobin ~ relyear + age_init + sex + htn + dkd,
-                random = ~ relyear | id,
-                 data = long_dt1train, na.action = na.omit)
-summary(hb_model)
-
-hb_model1 <- update(hb_model,
-                    fixed. = haemoglobin ~ relyear + I(relyear^2) + age_init +
-                        sex + htn + dkd)
-```
-hb_model1 had the lowest AIC
-```{r plt model}
-plt_model <- lme(platelet ~ relyear + age_init + sex + htn + dkd,
-                 random = ~ relyear | id,
-                 data = long_dt1train, na.action = na.omit)
-summary(plt_model)
-
-plt_model1 <- update(plt_model,
-                     fixed. = platelet ~ relyear + I(relyear^2) + age_init + 
-                         sex + htn + dkd)
-```
-plt_model had the lowest AIC
-```{r bmi model}
-bmi_model <- lme(bmi ~  relyear + age_init + sex + htn + dkd,
-                 random = ~ relyear | id,
-                 data = long_dt1train, na.action = na.omit)
-summary(bmi_model)
-
-bmi_model1 <- update(bmi_model,
-                     bmi ~  relyear + I(relyear^2) + age_init + sex + 
-                         htn + dkd)
-```
-bmi_model had the lowest AIC
-```{r diff sys/ diff dia model}
-diff_sys_model <- lme(diff_sys ~ relyear + age_init + sex + htn + dkd,
-                 random = ~ relyear | id,
-                 data = long_dt1train, na.action = na.omit)
-summary(diff_sys_model)
-
-diff_dia_model <- lme(diff_dia ~ relyear + age_init + sex + htn + dkd,
-                 random = ~ relyear | id,
-                 data = long_dt1train, na.action = na.omit)
-summary(diff_dia_model)
-```
-The residual was very high - variation within the longitudinal data
-```{r glucose model}
-glu_model <- lme(glucose ~ relyear + age_init + dkd,
-                 random = ~ relyear | id,
-                 data = long_dt1train, na.action = na.omit)
-summary(glu_model)
-
-glu_model1 <- update(glu_model,
-                     fixed. = glucose ~ relyear + I(relyear^2) + age_init + dkd)
-```
-glu_model had the lowest AIC
-```{r neut model}
-neut_model <- lme(neutrophils ~ relyear + age_init +  sex + htn + dkd + gn,
-                  random = ~ relyear | id,
-                 data = long_dt1train, na.action = na.omit)
-summary(neut_model)
-
-neut_model1 <- update(neut_model,
-                      fixed. = neutrophils ~ relyear + dkd)
-
-neut_model2 <- update(neut_model,
-                      neutrophils ~ relyear + I(relyear^2) + dkd)
-```
-neut_model1 had the lowest AIC
-```{r lymph model}
-lymph_model <- lme(lymphocytes ~ relyear + age_init +  sex + htn + dkd + gn,
-                  random = ~ relyear | id,
-                 data = long_dt1train, na.action = na.omit,
-                 control = list(maxIter = 100, opt = "optim"))
-summary(lymph_model)
-
-lymph_model1 <- update(lymph_model,
-                       fixed. = lymphocytes ~ relyear + age_init + sex)
-
-lymph_model2 <- update(lymph_model,
-                       fixed. = lymphocytes ~ relyear + I(relyear^2) + 
-                           age_init + sex)
-```
-lymph_model had the lowest AIC
